force-app/main/default/objects/Interaction/fields/Actual_Topic_2__c.field-meta.xml
<CustomField>
    <fullName>Actual_Topic_2__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field display the interaction tags with type as Topic</description>
    <inlineHelpText>Select each topic they raised.</inlineHelpText>
    <label>Actual Topic 2</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Interaction_Tag__c.Type__c</field>
            <operation>contains</operation>
            <value>Topic</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Interaction_Tag__c</referenceTo>
    <relationshipLabel>Interactions (Actual Topic 2)</relationshipLabel>
    <relationshipName>InteractionsTopic2</relationshipName>
    <type>Lookup</type>
</CustomField>