force-app/main/default/objects/Interaction/fields/Actual_Topic__c.field-meta.xml
<CustomField>
    <fullName>Actual_Topic__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Semicolon separated values from Interest Tag for Actual Topic</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>