force-app/main/default/objects/Interaction/fields/Actual_Topic_Formula__c.field-meta.xml
<CustomField>
    <fullName>Actual_Topic_Formula__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>This field give the concatenated value of actual topic 1 and actual topic 2 which is used in showing name of interaction and on global component</description>
    <formula>IF( Actual_Topic_2__r.Name != null,  Actual_Topic_1__r.Name  &amp;&apos;,&apos;&amp; Actual_Topic_2__r.Name ,Actual_Topic_1__r.Name)</formula>
    <label>Actual Topic Formula</label>
    <type>Text</type>
</CustomField>