force-app/main/default/objects/Interaction/fields/Actual_Topics__c.field-meta.xml
<CustomField>
    <fullName>Actual_Topics__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Comma separated list of actual topics selected from Interaction Context LWC</description>
    <label>Actual Topics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>