force-app/main/default/objects/Interaction/fields/ANZ_Number__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Number__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_Twilio</complianceGroup>
    <description>ANZ number initiated of received the call</description>
    <label>ANZ Number</label>
    <type>Phone</type>
</CustomField>