force-app/main/default/objects/Interaction/fields/AppointmentId__c.field-meta.xml
<CustomField>
    <fullName>AppointmentId__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Appointment this Interaction is related with</description>
    <label>Appointment ID</label>
    <referenceTo>Appointment_Commitment__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>