force-app/main/default/objects/Interaction/fields/Assisted__c.field-meta.xml
<CustomField>
    <fullName>Assisted__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Engagement Type: Assisted</description>
    <inlineHelpText>Tick how their query was resolved - with your assistance, self-service or both.</inlineHelpText>
    <label>Assisted</label>
    <type>Checkbox</type>
</CustomField>