force-app/main/default/objects/Interaction/fields/Attendance_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Confirmed__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Attendance Confirmed</label>
    <type>Checkbox</type>
</CustomField>