force-app/main/default/objects/Interaction/fields/Attendee_Category__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Category__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Specifies the category of attendee type</description>
    <label>Attendee Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office Group</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>