force-app/main/default/objects/Interaction/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Comma separated list of Interaction Attendees (updated based on Interaction Attendee records)</description>
    <label>Attendees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>