force-app/main/default/objects/Interaction/fields/Attendees_and_Roles__c.field-meta.xml
<CustomField>
    <fullName>Attendees_and_Roles__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The attendees stored as comma separated list, with their role prefixed and concatted using &apos;&amp;&apos;.</description>
    <label>Attendees and Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>