force-app/main/default/objects/Interaction/fields/Authentication_Method__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Method__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The method used to authenticate customer on the call</description>
    <inlineHelpText>The customer will need to be authenticated before an appointment occurs. Please select how the customer was authenticated.</inlineHelpText>
    <label>Authentication Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>InteractionType</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Authenticated</fullName>
            </value>
            <value>
                <fullName>Authenticated by Coach</fullName>
            </value>
            <value>
                <fullName>Call Transfer - Authenticated</fullName>
            </value>
            <value>
                <fullName>Could not authenticate</fullName>
            </value>
            <value>
                <fullName>Customer cannot be authenticated</fullName>
            </value>
            <value>
                <fullName>Manually Authenticated</fullName>
            </value>
            <value>
                <fullName>Non Customer Call</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Sighted App Profile</fullName>
            </value>
            <value>
                <fullName>Sighted ID</fullName>
            </value>
            <value>
                <fullName>SMS - OTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>