force-app/main/default/objects/Interaction/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the Primary Broker Associated with the Interaction</description>
    <inlineHelpText>If required, you can add additional attendees such as other RBMs/Brokers after you save this interaction.</inlineHelpText>
    <label>Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>