force-app/main/default/objects/Interaction/fields/Call_Recording_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Twilio</complianceGroup>
    <description>Used to store the unique call recording ID of the call</description>
    <label>Call Recording ID</label>
    <length>34</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>