force-app/main/default/objects/Interaction/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Denotes the category of the type of call.</description>
    <label>Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proactive</fullName>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
            <value>
                <fullName>Relationship building</fullName>
                <label>Relationship Building</label>
            </value>
            <value>
                <fullName>Needs Conversation</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>CAP Diary Comments</fullName>
            </value>
            <value>
                <fullName>COI Proactive</fullName>
            </value>
            <value>
                <fullName>COI Reactive</fullName>
            </value>
            <value>
                <fullName>COI Relationship Building</fullName>
            </value>
            <value>
                <fullName>Existing Proactive</fullName>
            </value>
            <value>
                <fullName>Existing Reactive</fullName>
            </value>
            <value>
                <fullName>Existing Relationship Building</fullName>
            </value>
            <value>
                <fullName>New Proactive</fullName>
            </value>
            <value>
                <fullName>New Reactive</fullName>
            </value>
            <value>
                <fullName>New Relationship Building</fullName>
            </value>
            <value>
                <fullName>KYC</fullName>
            </value>
            <value>
                <fullName>Service &amp; Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>