force-app/main/default/objects/Interaction/fields/Chat_or_Call_SID__c.field-meta.xml
<CustomField>
    <fullName>Chat_or_Call_SID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Twilio</complianceGroup>
    <description>Used to store the unique Chat / Call Channel ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID for call or message thread created by Twilio</inlineHelpText>
    <label>Chat or Call SID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>