force-app/main/default/objects/Interaction/fields/Chat_or_Call_SID_Formula__c.field-meta.xml
<CustomField>
    <fullName>Chat_or_Call_SID_Formula__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Twilio</complianceGroup>
    <description>This is formula field to store the chat or call sid from the twilio detail record to interaction</description>
    <formula>TwilioDetailsID__r.Chat_or_Call_SID__c</formula>
    <label>Chat or Call SID Formula</label>
    <type>Text</type>
</CustomField>