force-app/main/default/objects/Interaction/fields/Chat_Queue__c.field-meta.xml
<CustomField>
    <fullName>Chat_Queue__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Twilio</complianceGroup>
    <description>Indicates which queue the chat has been transferred to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Chat Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>