force-app/main/default/objects/Interaction/fields/CLGCustomer__c.field-meta.xml
<CustomField>
    <fullName>CLGCustomer__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field created to maintain interactions on Customer - CLG Customer</description>
    <label>CLG</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CLG</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interactions (CLG)</relationshipLabel>
    <relationshipName>CLGInteractions</relationshipName>
    <type>Lookup</type>
</CustomField>