force-app/main/default/objects/Interaction/fields/Closing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Closing_Notes__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Closing Notes that related to interaction.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Closing-Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>