force-app/main/default/objects/Interaction/fields/Coaching_Summary__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Summary__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Summary linked with Interaction</description>
    <label>Coaching Summary</label>
    <referenceTo>Coaching_Summary__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>