force-app/main/default/objects/Interaction/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Comment captured as part of CAP Diary Comments.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>