force-app/main/default/objects/Interaction/fields/Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>The contact mobile number for either the Contact or Lead associated with the interaction.</description>
    <label>Contact Mobile</label>
    <type>Phone</type>
</CustomField>