force-app/main/default/objects/Interaction/fields/ContactRequestId__c.field-meta.xml
<CustomField>
    <fullName>ContactRequestId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Holds the ContactRequestId from which this Interaction was created. Can&apos;t be a lookup as Salesforce does not allow lookups to ContactRequest.</description>
    <externalId>true</externalId>
    <label>ContactRequestId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>