force-app/main/default/objects/Interaction/fields/Customer_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relationship__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Interactions for Customer Relationships</description>
    <label>Customer Relationship</label>
    <referenceTo>Customer_Relationship__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>