force-app/main/default/objects/Interaction/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Comma separated Selected of Engagement Interaction Context LWC</description>
    <label>Engagement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>