force-app/main/default/objects/Interaction/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <description>If Appointment Time is not accepted within Escalated Time- Visual Indicator</description>
    <formula>IF(
    Escalated_Flag__c
,
    IMAGE(
        &apos;/resource/alertpng/alert_120.png&apos;
        , &apos;Alert&apos;
        , 30
        , 30
    )
, &apos;&apos;
)</formula>
    <inlineHelpText>The appointment will be escalated and display a bell if it hasn&apos;t been allocated to a coach within 24hrs of the appointment scheduled time.</inlineHelpText>
    <label>Escalated</label>
    <type>Text</type>
</CustomField>