force-app/main/default/objects/Interaction/fields/Escalated_Flag__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Flag__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Indicated that Appointment Interaction wasn't assigned to coach before it was escalated.</description>
    <formula>IF((StartTime - NOW()) &lt; 1 &amp;&amp; ISPICKVAL( Status__c , &apos;Unassigned&apos;),TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a backend field for list views to filter and show escalated appointments</inlineHelpText>
    <label>Escalated Flag</label>
    <type>Checkbox</type>
</CustomField>