force-app/main/default/objects/Interaction/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Record ID of event record created for appointment</description>
    <label>Event Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>