force-app/main/default/objects/Interaction/fields/Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Focus_Area__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_Salesforce</complianceGroup>
    <description>Based on Reason field ,values will be populated</description>
    <label>Focus Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Interaction_Purpose__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Focus_Area</valueSetName>
    </valueSet>
</CustomField>