force-app/main/default/objects/Interaction/fields/Follow_up_Actions__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Actions__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Links the current interaction to its follow-up interaction.</description>
    <inlineHelpText>If a follow up interaction is required, please create a separate interaction.</inlineHelpText>
    <label>Follow up/Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meet in few weeks time</fullName>
            </value>
            <value>
                <fullName>Meet in 1-2 months time</fullName>
            </value>
            <value>
                <fullName>Meet in 3-4 months time</fullName>
            </value>
            <value>
                <fullName>Meet in 5-6 months time</fullName>
            </value>
            <value>
                <fullName>Email ANZ Materials</fullName>
            </value>
            <value>
                <fullName>Arrange video call / phone call to close out application query</fullName>
            </value>
            <value>
                <fullName>Review performance metrics for broker / office groups for next meeting</fullName>
            </value>
            <value>
                <fullName>Schedule Brokerology Webinar / Walkthrough for broker / broker office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>