force-app/main/default/objects/Interaction/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Interaction</description>
    <inlineHelpText>Only one interaction can be linked.</inlineHelpText>
    <label>Interaction</label>
    <referenceTo>Interaction</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Related_Interaction</relationshipName>
    <type>Lookup</type>
</CustomField>