force-app/main/default/objects/Interaction/fields/Interaction_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Auto_Number__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Integrity - Accurate;Source - Salesforce</complianceGroup>
    <description>Interaction Number</description>
    <displayFormat>IR-{00000000}</displayFormat>
    <label>Interaction Auto Number</label>
    <type>AutoNumber</type>
</CustomField>