force-app/main/default/objects/Interaction/fields/Interaction_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Interaction_External_Id__c</fullName>
    <complianceGroup>Source - Salesforce;Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>This field will capture the Contact Request auto number when the Interaction record is created through Self Service otherwise will contain the Interaction Auto Number when Interaction record is created through Assisted Channel.</description>
    <externalId>true</externalId>
    <label>Interaction External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>