force-app/main/default/objects/Interaction/fields/Interaction_Number_Link__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Number_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  Id , Interaction_External_Id__c  , &apos;_self&apos;)</formula>
    <label>Interaction Number</label>
    <type>Text</type>
</CustomField>