force-app/main/default/objects/Interaction/fields/Interaction_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Purpose__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Reason for Interaction</description>
    <inlineHelpText>For Interaction records - select whom the engagement is with, eg customer. For Appointment booking - select the main topic of the appointment, eg financial wellbeing.</inlineHelpText>
    <label>For</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>InteractionType</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANZ Customer</fullName>
            </value>
            <value>
                <fullName>ANZ Plus Customer</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Digital Support</fullName>
            </value>
            <value>
                <fullName>Existing ANZ Customer</fullName>
            </value>
            <value>
                <fullName>Financial Wellbeing</fullName>
            </value>
            <value>
                <fullName>Non-Customer</fullName>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>