force-app/main/default/objects/Interaction/fields/Interaction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Reason__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Tracks the purpose of each interaction</description>
    <label>Interaction Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Assistance - Policy</fullName>
            </value>
            <value>
                <fullName>Application Assistance - Pricing</fullName>
            </value>
            <value>
                <fullName>Application Assistance - Process</fullName>
            </value>
            <value>
                <fullName>Assistance - Issue/Escalation</fullName>
            </value>
            <value>
                <fullName>Communication Request or Survey Response</fullName>
            </value>
            <value>
                <fullName>Governance - Consequence Management</fullName>
            </value>
            <value>
                <fullName>Relationship Contact Point Introduction</fullName>
            </value>
            <value>
                <fullName>Relationship Building</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>