force-app/main/default/objects/Interaction/fields/Interaction_Summary__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Summary__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Summary linked with Interaction (title of the interaction summary in UI, but linking to the ID in the backend)</description>
    <label>Interaction Summary</label>
    <referenceTo>InteractionSummary</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>